--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   align-items:center;
   justify-content:center;
   flex-direction:column;
-  background-color:101020;
+  background-color:goldenrod;
   color:white;
  }
 
@@ -15,6 +15,13 @@ video{
 #valueNumber{
   width:100px;
   background-color: transparent;
+}
+
+#recorderTitle{
+  margin-bottom:-5px;
+  color: white;
+  text-shadow: 0px 0px 5px black;
+  letter-spacing: 10px;
 }
 
 #rangevalue{
@@ -27,14 +34,14 @@ video{
   align-items:center;
   justify-content:center;
   flex-direction:column;
-  box-shadow: inset 0 0 200px 70px black, 0 0 2px 2px white;
+  box-shadow: inset 0 0 300px 100px black,inset 0 0 100px -50px black, 0 0 2px 2px white;
   color:white;
   background-color:#202530;
   filter: drop-shadow(0px 0px 50px white);
   padding:20px;
   width:100vw;
   height:100vh;
-  background-color: white;
+  background-color: whitesmoke;
 }
 
 #container{
@@ -143,16 +150,19 @@ video {
   background-color: grey;
   text-decoration: none;
   border-radius:10px;
-  background-image: linear-gradient(white, grey);
+  background-image: linear-gradient(white, darkgrey);
   color:black;
-  box-shadow: inset 0 0 1px 1px black, 0 0 5px 2px white;
+  box-shadow: 0 0 50px 0px steelblue, inset 0 0 3px 1px steelblue, 0 0 5px 2px white;
   width:60%;
+  letter-spacing: 5px;
+  text-shadow: 0px 0px 5px black;
 }
 
 .button:hover {
-  box-shadow: inset 0 0 0px 3px white, 0 0 1px 2px white;
-  filter: drop-shadow(0px 0px 5px white);
-  color: white;
+   box-shadow: 0 0 10px 0px steelblue, inset 0 0 3px 1px steelblue, 0 0 5px 2px white;
+ filter: drop-shadow(0px 0px 10px white);
+  color: orange;
+text-shadow: 0px 0px 5px black;
 }
 
 .button:active {
@@ -166,6 +176,7 @@ video {
   background-image: linear-gradient(white, grey);
   color:black;
   width:60%;
+  display:none;
 }
 
 h2 {
@@ -224,14 +235,14 @@ input[type="number"]:focus {
 
 input[type="range"] {
   -webkit-appearance: none;
-  margin-right: 15px;
   width: 200px;
   height: 7px;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 1.6);
   border-radius: 5px;
   background-image: linear-gradient(#ff4500, #ff4500);
   background-size: 70% 100%;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat;  
+  box-shadow: 0 0 20px 0px white;
 }
 
 /* Input Thumb */
@@ -239,10 +250,10 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   height: 20px;
   width: 20px;
-  border-radius: 50%;
+  border-radius: 20%;
   background: #ff4500;
   cursor: ew-resize;
-  box-shadow: 0 0 2px 0 #555;
+  box-shadow: 0 0 20px 5px #ff4500;
   transition: background .3s ease-in-out;
 }
 
