--- a/style.css
+++ b/style.css
@@ -50,15 +50,16 @@ video{
   align-items:center;
   justify-content:center;
   flex-direction:column;
-  box-shadow: inset 0 0 50px 10px steelblue ,inset 0 0 5px 5px white,inset 0 0 10px 10px white,0 0 30px 10px black;
+  box-shadow: inset 0 0 10px 5px black, inset 0 0 50px 10px steelblue ,inset 0 0 5px 5px white,inset 0 0 10px 10px white,0 0 30px 10px black;
   color:black;
   background-color:white;
   filter: drop-shadow(0px 0px 50px black);
   border-radius:20px;
   width:100%;
   max-width:500px;
-
-}
+  height:80%;
+  background-image: url('https://source.unsplash.com/900x900/?sunset');
+  }
 
 #secondContainer{
   
@@ -71,9 +72,18 @@ video{
   filter: drop-shadow(0px 0px 5px black);
   width:100%;
   background-color: #202530;
-  box-shadow: inset 0 0 10px -5px white,inset 0 0 90px 00px steelblue,inset 0 0 30px 0px white,inset 0 0 5px 5px white;
+  box-shadow:  inset 0 0 10px -5px white,inset 0 0 90px 00px steelblue,inset 0 0 30px 0px white,inset 0 0 5px 5px white;
   padding:20px;
+  margin-bottom:100px;
+  margin-top:50px;
+}
 
+#visualization{
+  background-color:black;
+  width:100%;
+  margin-top:10%;
+  margin-bottom:10%;
+  height:100px;
 }
 
 #setTime{
@@ -159,8 +169,8 @@ video {
 }
 
 .button:hover {
-   box-shadow: 0 0 10px 0px steelblue, inset 0 0 3px 1px steelblue, 0 0 5px 2px white;
- filter: drop-shadow(0px 0px 10px white);
+   box-shadow: 0 0 10px 0px white, inset 0 0 3px 1px steelblue, 0 0 50px -5px steelblue;
+
   color: orange;
 text-shadow: 0px 0px 5px black;
 }
