--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ video {
   text-shadow: 0px 0px 5px black;
 }
 
-.button:hover {
+button:hover {
    box-shadow: 0 0 10px 0px white, inset 0 0 3px 1px steelblue, 0 0 50px -5px steelblue;
     border: solid 1px orange;
   color: orange;
